--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^9.0.6",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "next": "9.0.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
+  },
+  "devDependencies": {
+    "@zeit/next-sass": "1.0.1",
+    "node-sass": "4.12.0"
   }
 }
