--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "next": "9.0.6",
+    "next-images": "1.2.0",
     "react": "16.9.0",
     "react-dom": "16.9.0"
   },
