--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@zeit/next-sass": "1.0.1",
-    "node-sass": "4.12.0"
+    "node-sass": "4.12.0",
+    "prop-types": "15.7.2"
   }
 }
