--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "4.17.15",
     "next": "9.0.6",
     "next-images": "1.2.0",
     "react": "16.9.0",
