--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 8081",
     "build": "next build",
     "start": "next start"
   },
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.19.0",
     "lodash": "4.17.15",
     "next": "9.0.6",
     "next-images": "1.2.0",
+    "nookies": "2.0.8",
     "react": "16.9.0",
     "react-dom": "16.9.0"
   },
