--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lodash": "4.17.15",
     "next": "9.0.6",
     "next-images": "1.2.0",
+    "nookies": "^2.4.0",
     "react": "16.9.0",
     "react-dom": "16.9.0"
   },
